<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/Header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/cv_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:startIconDrawable="@drawable/ic_e_mail"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/cv_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/cv_email"
        app:layout_constraintStart_toStartOf="@+id/cv_email"
        app:layout_constraintTop_toBottomOf="@+id/cv_email">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nickname"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/cv_password"
        app:layout_constraintEnd_toEndOf="@+id/cv_email"
        app:layout_constraintStart_toStartOf="@+id/cv_email"
        app:layout_constraintTop_toBottomOf="@+id/cv_nickname">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/cv_verify_password"
        app:layout_constraintEnd_toEndOf="@+id/cv_email"
        app:layout_constraintStart_toStartOf="@+id/cv_email"
        app:layout_constraintTop_toBottomOf="@+id/cv_phone_number">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_verify_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_already_account"
        app:layout_constraintEnd_toEndOf="@+id/cv_email"
        app:layout_constraintStart_toStartOf="@+id/cv_email"
        app:layout_constraintTop_toBottomOf="@+id/cv_password">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_verify_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/verify_password"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_verify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/already_have_account"
        android:textAppearance="@style/Medium"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/cv_verify_password" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/social_sign_up"
        android:textAppearance="@style/Subtitle"
        app:layout_constraintBottom_toTopOf="@+id/img_google_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_already_account"
        app:layout_constraintEnd_toEndOf="@+id/cv_email"
        app:layout_constraintTop_toTopOf="@+id/tv_already_account"
        app:srcCompat="@drawable/ic_arrow" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="@dimen/_12sdp"
        android:text="@string/sign_up"
        app:backgroundTint="@color/blue"
        app:cornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/cv_email"
        app:layout_constraintStart_toStartOf="@+id/cv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_already_account" />

    <ImageView
        android:id="@+id/img_google_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_social_icon"
        android:elevation="@dimen/_1sdp"
        android:paddingStart="@dimen/_28sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingEnd="@dimen/_28sdp"
        android:paddingBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_facebook_sign_up"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_google" />

    <ImageView
        android:id="@+id/img_facebook_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_social_icon"
        android:elevation="@dimen/_1sdp"
        android:paddingStart="@dimen/_28sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingEnd="@dimen/_28sdp"
        android:paddingBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@+id/img_google_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_google_sign_up"
        app:layout_constraintTop_toTopOf="@+id/img_google_sign_up"
        app:srcCompat="@drawable/ic_facebook" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:elevation="@dimen/_4sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true" />
</androidx.constraintlayout.widget.ConstraintLayout>